# pcr-classification

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  test
Poster/: poster.ppt
code/: Experiments1_Gernot.ipynb  Experiments1_Ivan.ipynb  Experiments2_Nico.ipynb  Experiments3_Gernot.ipynb  boosted_tree.py  data_lib.py  decision_lib.py  downsides_of_decorrelation.ipynb  generate_plots.ipynb  plot_lib.py  transform_lib.py
code/.ipynb_checkpoints/: Experiments1_Ivan-checkpoint.ipynb  Experiments3_Gernot-checkpoint.ipynb
code/custom_tkinter/: tkinter_backend.py  tkinter_classes.py  tkinter_main.py
code/decorrelation/: downsides_of_decorrelation.ipynb  neg_cluster_based_classifier.ipynb  threshhold_cluster_mean_classifier_full_pairwise.ipynb  threshhold_cluster_mean_dillution.ipynb  threshhold_cluster_mean_wa.ipynb
code/hierarchy/: cluster_density_classifier_wa_outlier.ipynb  cluster_density_dillution_no_outlier.ipynb  cluster_density_dillution_outlier.ipynb  cluster_hierarchy_density_classifier_dillution.ipynb  cluster_hierarchy_mean_classifier_dillution.ipynb  cluster_hierarchy_mean_classifier_wa.ipynb  cluster_relative_hierarchy_mean_classifier_dillution.ipynb  cluster_relative_hierarchy_mean_classifier_dillution_density.ipynb  cluster_relative_hierarchy_mean_classifier_wa.ipynb  cluster_relative_hierarchy_mean_classifier_wa_density.ipynb  cluster_relative_hierarchy_mean_classifier_wa_gernot.ipynb
code/libs/: data_lib.py  decision_lib.py  negative_dimnesion_detection.py  plot_lib.py  stats_lib.py  transform_lib.py  (+1 more)
(+22 files in other folders)
