[tool.poetry]
name = "ds-lab"
version = "0.1.0"
description = ""
authors = ["Nico Graf <ncograf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.1"
path = "^16.7.1"
scikit-learn = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
